refactor: Use getFirst/getLast and Optional<PersonProfile> for spouse
- Changed get(0) to getFirst() for cleaner Java 21 idiom
- Changed spouse() return type to Optional<PersonProfile>
- Tests now use assertTrue(spouse().isPresent()) and isEmpty()

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>